gcc/testsuite/rust/rustc/ui/extenv/extenv-not-string-literal.rs
fn main() { env!(10, "two"); } // { dg-error "" "" { target *-*-* } }

